--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/common": "^8.2.4",
+    "@nestjs/core": "^8.2.4",
+    "@nestjs/platform-express": "^8.2.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
+    "@nestjs/cli": "^8.1.6",
     "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.13",
+    "@nestjs/testing": "^8.2.4",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
